--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</template>
 
 		<div class="container">
-			<h1>воооот</h1>
+			<h1>🕯️Liturgical</h1>
 			<article class="add-device-block shadow">
 				<input type="text" id="add-device-name" class="strip-defaults input-outline text-input" placeholder="device name"></input>
 				<button id="add-device-button" class="strip-defaults butt-on">add device</button>
