--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<template id="template-rituals-placeholder">
-			<div class="rituals-placeholder">no rituals added</div>
+			<div class="rituals-placeholder">ритуалы не найдены</div>
 		</template>
 		<template id="template-ritual">
 			<details>
@@ -31,20 +31,20 @@
 				<div class="device-rituals-list"></div>
 				<hr/>
 				<details>
-					<summary>add ritual</summary>
+					<summary>добавить ритуал</summary>
 					<div id="device-rituals-form">
-						<input type="text" data-id="name" class="strip-defaults input-outline text-input" placeholder="ritual name"></input>
-						<textarea data-id="desc" class="strip-defaults input-outline text-input" placeholder="ritual description"></textarea>
+						<input type="text" data-id="name" class="strip-defaults input-outline text-input" placeholder="название ритуала"></input>
+						<textarea data-id="desc" class="strip-defaults input-outline text-input" placeholder="подробности"></textarea>
 						<div class="device-rituals-interval">
-							<span>every</span>
+							<span>каждые</span>
 							<input type="number" data-id="time" class="strip-defaults input-outline text-input" value="10"></input>
-							<span>days</span>
+							<span>дней</span>
 						</div>
 						<div>
-							<span>starting from</span>
+							<span>последняя служба</span>
 							<input type="date" data-id="from" class="strip-defaults input-outline date-input"></input>
 						</div>
-						<button class="strip-defaults butt-on">add ritual</button>
+						<button class="strip-defaults butt-on">добавить</button>
 					</div>
 				</details>
 			</article>
@@ -57,15 +57,15 @@
 			<h1>🕯️Liturgical</h1>
 			
 			<div class="tabs-selector">
-				<button data-tab="manage" class="strip-defaults butt-on">manage</button>
-				<button data-tab="schedule" class="strip-defaults butt-on">schedule</button>
+				<button data-tab="manage" class="strip-defaults butt-on">редактировать</button>
+				<button data-tab="schedule" class="strip-defaults butt-on">расписание служб</button>
 			</div>
 
 			<rampike-tabs id="rp-tabs-side" tab="schedule">
 				<rampike-tab key="manage">
 					<article class="add-device-block shadow">
-						<input type="text" id="add-device-name" class="strip-defaults input-outline text-input" placeholder="device name"></input>
-						<button id="add-device-button" class="strip-defaults butt-on">add device</button>
+						<input type="text" id="add-device-name" class="strip-defaults input-outline text-input" placeholder="название устройства"></input>
+						<button id="add-device-button" class="strip-defaults butt-on">добавить устройство</button>
 					</article>
 					<div class="devices-list"></div>
 				</rampike-tab>
